fix SPARK-37105